--- a/src/pages/members/MembersStyle.css
+++ b/src/pages/members/MembersStyle.css
@@ -1,27 +1,30 @@
 .App {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.App input {
-    margin-top: 20px;
-    width: 300px;
-    height: 40px;
-    font-size: 20px;
-    padding-left: 10px;
+#subInput {
+  height: 40px;
+}
+
+#searchInput {
+  width: 300px;
+  height: 40px;
+  font-size: 20px;
+  padding-left: 10px;
 }
 
 .Members {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    font-family: Arial, Helvetica, sans-serif;
-    margin: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-family: Arial, Helvetica, sans-serif;
+  margin: 15px;
 }
 .buttons {
-    margin: 20px;
+  margin: 20px;
 }
